Issue #9186:  log1p(-1.0) should raise ValueError, not OverflowError.